--- a/HKTV_MALL_ANALYSIS/MasterCode.ipynb
+++ b/HKTV_MALL_ANALYSIS/MasterCode.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# IEDA 3302 Project\n",
-    "### By: Amodh Mathur, Malhaar Vora, Cristal Celeste"
+    "# IEDA 3560 Project\n",
+    "### By: Amodh Mathur"
    ]
   },
   {
@@ -22,14 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE: The name in 'brackets' eg . (name) is the person majorly responsible for writing that subtask ALTHOUGH ALL 3 MEMBERS have had suggestions and inputs into the analysis conducted."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### The following code is used to import the various libraries used for the analysis (Malhaar)"
+    "### The following code is used to import the various libraries used for the analysis"
    ]
   },
   {
@@ -63,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The following tasks uses an array called 'Categories' which are the product categories for various clothing types, and then using the data obtained from the HKTVMALL API (see the 'htkvmall_data_collection' notebook), we combine the data from various categories and store as one dataframe (and in 1 csv output for easy use later). This is obtained using the HKTV MALL databank (Malhaar)"
+    "### The following tasks uses an array called 'Categories' which are the product categories for various clothing types, and then using the data obtained from the HKTVMALL API (see the 'htkvmall_data_collection' notebook), we combine the data from various categories and store as one dataframe (and in 1 csv output for easy use later). This is obtained using the HKTV MALL databank"
    ]
   },
   {
@@ -428,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The following cleanup allows us to use the category mapping (obtained from HKTV mall) to truncate some un-needed columns and make the data better to understand. (Malhaar)  "
+    "### The following cleanup allows us to use the category mapping (obtained from HKTV mall) to truncate some un-needed columns and make the data better to understand.  "
    ]
   },
   {
@@ -698,7 +691,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Obtain the data from HKO using the HKO open data API and doing some cleanup / formatting to make the analysis easier (Amodh)"
+    "### Obtain the data from HKO using the HKO open data API and doing some cleanup / formatting to make the analysis easier"
    ]
   },
   {
@@ -857,7 +850,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### This is where we merge the data to view the temperature and purchase data alongside each other (Amodh / Malhaar)"
+    "### This is where we merge the data to view the temperature and purchase data alongside each other "
    ]
   },
   {
@@ -1107,7 +1100,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Our first group by where we group to see the number of occurences for each temperature (used later) (Amodh)"
+    "### Our first group by where we group to see the number of occurences for each temperature (used later)"
    ]
   },
   {
@@ -1243,7 +1236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can now break down the number of sales per month per year (Amodh). AND break it down even further to view it in each category."
+    "### We can now break down the number of sales per month per year. AND break it down even further to view it in each category."
    ]
   },
   {
@@ -2161,7 +2154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Regression Analysis using the data gathered in the previous tasks (Amodh / Malhaar) to make the visualisations!"
+    "### Regression Analysis using the data gathered in the previous tasks  to make the visualisations!"
    ]
   },
   {
@@ -2384,7 +2377,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The first of the visualizations allowing us to view if there is a relationship for temperature against sales of winter clothing (and testing the degrees that fit best) (Amodh)"
+    "### The first of the visualizations allowing us to view if there is a relationship for temperature against sales of winter clothing (and testing the degrees that fit best) "
    ]
   },
   {
@@ -2477,7 +2470,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using the 2nd degree we can plot the total sales monthly for each year AND View the Months with the lowest sales (using 'mins') (Amodh / Malhaar)"
+    "### Using the 2nd degree we can plot the total sales monthly for each year AND View the Months with the lowest sales (using 'mins')"
    ]
   },
   {
@@ -2649,7 +2642,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can go one step further and conduct our analysis on a categorial basis (Amodh)"
+    "### We can go one step further and conduct our analysis on a categorial basis "
    ]
   },
   {
@@ -2745,10 +2738,7 @@
       "Degree- 2\n",
       "weight [  2.19080919 -31.60639361 136.27272727]\n",
       "R^2 Value 0.7688631203263185\n",
-      "2020\n",
-      "Degree- 2\n",
-      "weight [  2.57392607 -19.73376623  62.68181818]\n",
-      "R^2 Value 0.41602619066709234\n"
+      "2020\n"
      ]
     },
     {
@@ -2763,6 +2753,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Degree- 2\n",
+      "weight [  2.57392607 -19.73376623  62.68181818]\n",
+      "R^2 Value 0.41602619066709234\n",
       "2021\n",
       "Degree- 2\n",
       "weight [  7.15509491 -72.67707293 156.75      ]\n",
@@ -2882,32 +2875,7 @@
      "output_type": "stream",
      "text": [
       "<ipython-input-16-b7e123147adf>:9: RankWarning: Polyfit may be poorly conditioned\n",
-      "  w,tp=graph(2,cat_yearly[i][j], title = 'Total Sales (Degree 2) for '+i + ' in '+j)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2017\n",
-      "Degree- 2\n",
-      "weight [ 0.09090909 -1.27272727  4.18181818]\n",
-      "R^2 Value 1.0\n",
-      "2018\n",
-      "Degree- 2\n",
-      "weight [ 0.14285714 -1.72857143  6.28571429]\n",
-      "R^2 Value 0.9166666666666667\n",
-      "2019\n",
-      "Degree- 2\n",
-      "weight [0.08333333 0.16666667 0.33333333]\n",
-      "R^2 Value nan\n",
-      "2020"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  w,tp=graph(2,cat_yearly[i][j], title = 'Total Sales (Degree 2) for '+i + ' in '+j)\n",
       "<ipython-input-16-b7e123147adf>:9: RankWarning: Polyfit may be poorly conditioned\n",
       "  w,tp=graph(2,cat_yearly[i][j], title = 'Total Sales (Degree 2) for '+i + ' in '+j)\n",
       "<ipython-input-12-de8b8f7ffdc1>:10: RuntimeWarning: invalid value encountered in double_scalars\n",
@@ -2926,7 +2894,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
+      "2017\n",
+      "Degree- 2\n",
+      "weight [ 0.09090909 -1.27272727  4.18181818]\n",
+      "R^2 Value 1.0\n",
+      "2018\n",
+      "Degree- 2\n",
+      "weight [ 0.14285714 -1.72857143  6.28571429]\n",
+      "R^2 Value 0.9166666666666667\n",
+      "2019\n",
+      "Degree- 2\n",
+      "weight [0.08333333 0.16666667 0.33333333]\n",
+      "R^2 Value nan\n",
+      "2020\n",
       "Degree- 2\n",
       "weight [0.33333333 0.33333333 0.33333333]\n",
       "R^2 Value nan\n",
@@ -2986,7 +2966,11 @@
       "2019\n",
       "Degree- 2\n",
       "weight [0.00796372 0.11869388 1.73075737]\n",
-      "R^2 Value 1.0\n"
+      "R^2 Value 1.0\n",
+      "2020\n",
+      "Degree- 2\n",
+      "weight [ -2.06424146  26.93206276 -28.5760716 ]\n",
+      "R^2 Value 0.23843502064077082\n"
      ]
     },
     {
@@ -3001,10 +2985,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020\n",
-      "Degree- 2\n",
-      "weight [ -2.06424146  26.93206276 -28.5760716 ]\n",
-      "R^2 Value 0.23843502064077082\n",
       "2021\n",
       "Degree- 2\n",
       "weight [-0.21528472  4.66583417  3.5       ]\n",
@@ -3975,7 +3955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4036,18 +4016,6 @@
     "As seen in the regression charts, our hypothesis was somewhat inaccurate. According to the data given by HKTV mall and the Hong Kong Observatory there is a steady trend of increased sales of winter clothing when the weather is usually around 20-25 degrees C. During the months of October, November and December [before the weather gets cooler]. We also saw a steady trend of having the least number of sales during the months of May, June, and July. \n",
     "\n",
     "With this information we recommend HKTV mall to release their winter clothing before the cooler months start so around October ,since that is when the weather starts dropping to 25 degrees. HKTV mall should also discount their winter clothing during the months of summer (May and June) so they could have steady sales throughout the year. With discounted winter attire, people in Hong Kong would have more incentive of buying the clothing since they could be thinking of buying the winter clothes while its on sale for the upcoming winter instead of buying it at full price."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Who did what?:\n",
-    "Malhaar - the notebook structure + markdown commenting, HTKV Mall API DATA Gathering and understanding (the hktvmall_data_collection file), edits and fixes to code structure \n",
-    "<br>\n",
-    "Amodh - Helped with obtaining the permission for HTKV Mall Data, major Regression Analysis and Visualizations, HKO Data gathering code,\n",
-    "<br>\n",
-    "Cristal - Video Editing and Structure, Introduction and Conclusion type ups, coming up with hypothesis and quick data understanding using Excel spreadsheets."
    ]
   }
  ],
